# server/src/modules/newsrooms/NewsController.ts
@@ -2,7 +2,7 @@ import { Request, Response } from 'express';
 
 import { StatusCodes } from 'http-status-codes';
 import { logger } from '@/utils/logger';
-import { createNews, getNewsDetailByPkey, getNewsList } from './NewsService';
+import { createNews, deleteNews, getNewsDetailByPkey, getNewsList, updateNews } from './NewsService';
 
 export const findAllNews = async (req: Request, res: Response): Promise<any> => {
   // get the request header and pass it to the service
@@ -28,7 +28,7 @@ export const findNewsByPkey = async (req: Request, res: Response): Promise<any> 
   res.status(StatusCodes.OK).json({ data: result, message: 'findOneDetail', isSuccess: true });
 };
 
-export const createNewsRoom = async (req: Request, res: Response): Promise<any> => {
+export const createNewsroom = async (req: Request, res: Response): Promise<any> => {
   const { result, resultCode, errMsg } = await createNews(req.body);
 
   // Log the user body
@@ -39,6 +39,36 @@ export const createNewsRoom = async (req: Request, res: Response): Promise<any> 
     resultCode: resultCode,
     errMsg: errMsg,
     message: 'created news',
+    isSuccess: true,
+  });
+};
+
+export const updateNewsroom = async (req: Request, res: Response): Promise<any> => {
+  const { result, resultCode, errMsg } = await updateNews(req.body);
+
+  // Log the user body
+  logger.info(`Update News: ${JSON.stringify(req.body, null, 2)}`);
+
+  res.status(StatusCodes.OK).json({
+    data: result,
+    resultCode: resultCode,
+    errMsg: errMsg,
+    message: 'Updated news',
+    isSuccess: true,
+  });
+};
+
+export const deleteNewsroom = async (req: Request, res: Response): Promise<any> => {
+  const { result, resultCode, errMsg } = await deleteNews(req.body);
+
+  // Log the user body
+  logger.info(`Delete News: ${JSON.stringify(req.body, null, 2)}`);
+
+  res.status(StatusCodes.OK).json({
+    data: result,
+    resultCode: resultCode,
+    errMsg: errMsg,
+    message: 'Delete news',
     isSuccess: true,
   });
 };
